crates/toml/tests/snapshots/invalid/float/double-point-2.stderr
TOML parse error at line 1, column 21
  |
1 | double-point-2 = 0.1.2
  |                     ^^
invalid float, expected nothing

---
TOML parse error at line 1, column 18
  |
1 | double-point-2 = 0.1.2
  |                  ^^^^^
invalid float
